contact page alignment fix

--- a/assets/css/map.css
+++ b/assets/css/map.css
@@ -4,6 +4,7 @@
   width: 100%;
   height: 450px;
   overflow:hidden;
+  margin-bottom: 30px;
 }
 
 
